# Voronoi_postprocess

./: .gitignore  README.md  pyproject.toml
example/: example.ipynb  example_class.ipynb  lightcone_vide.ipynb  plot_void_contour.py  test_box.py  test_lightcone.py
example/data/box/example_simulation/: sim_ss1.0.py
example/data/box/logs/example_simulation/sim_ss1.0/: generate_sim_ss1.0_z0.00_d00.out  pruneVoids_sim_ss1.0_z0.00_d00.out  zobov_sim_ss1.0_z0.00_d00.out
example/data/lightcone/: example_observation.py
example/data/lightcone/examples/example_observation/sample_example_observation/: boundaryDistances_all_example_observation.out  boundaryDistances_central_example_observation.out  centers_all_example_observation.out  centers_central_example_observation.out  contour_map.fits  macrocenters_central_example_observation.out  mask_map.fits  mock_sphere.txt  sample_info.txt  shapes_all_example_observation.out  sky_positions_all_example_observation.out  sky_positions_central_example_observation.out  total_particles.txt  voidDesc_example_observation.out  (+17 more)
threshold_voids/: voronoi_threshold_box.py  voronoi_threshold_lightcone.py
threshold_voids/vide_postproc_mod/: __init__.py
threshold_voids/vide_postproc_mod/voidUtil/: __init__.py  catalogUtil.py  matchUtil_py.hide
vorothreshold/: __init__.py  main.py  order_functions.py  overlaps.py  read_funcs.py  utilities.py  voronoi_threshold.py  voronoi_threshold_box.py  voronoi_threshold_lightcone.py
vorothreshold.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vorothreshold/vide_postproc_mod/backend/: __init__.py
(+18 files in other folders)
